feat: business intelligence copilot (sprint 30 pt2 ch1)
- Replaces Ch7 BI with enhanced version: 12 engines (RevenueAnalytics 24mo/5k+ customers, CustomerAnalytics 4 segments, ProductAnalytics 50+ products, InventoryAnalytics, TrainingAnalytics 10 trainers/500+ students, ExecutiveDashboard with CompanyHealthScore 6-dimension weighted, ForecastingEngine 4 methods + auto-select, DecisionSupportEngine 24 templates with WHY/impact/confidence, RiskDetectionEngine 6 risk types, NaturalLanguageAnalyticsEngine 6 intents, VisualizationEngine 9 chart types, BusinessInsightsEngine 33 rules)
- 13 UI components, 15 test files, 9 docs + OpenAPI v2.0